# SchemNBTConverter

./: .gitignore  CHANGELOG.md  README.md  build_linux.sh  build_windows.bat  install_linux_launcher.sh  launcher.py  pyproject.toml  requirements.txt  run_gui.bat  run_linux.sh
src/schem_nbt_converter/: __init__.py  cli.py  errors.py  gui.py  legacy.py  model.py  parsers.py  versions.py  writer.py
tests/: test_converter.py  test_versions.py
