[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schem-nbt-converter"
version = "1.2.0"
description = "Batch converter for Minecraft .schem and .litematic files to vanilla .nbt structures"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Nanaconda38" }]
dependencies = [
  "litemapy==0.11.0b0",
  "nbtlib==2.0.4",
  "tkinterdnd2==0.4.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pyinstaller>=6"]

[project.scripts]
schem-nbt-converter = "schem_nbt_converter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
